Mark device as registered at the end of demo mode setup flow (both online and offline).

Bug: 868025
Test: Run DemoSetupTest, DemoSetupControllerTest and WizardControllerDemoSetupTest.
Change-Id: Ifca8bc7f4c053d2ff060ee0fc529f38690124a65
Reviewed-on: https://chromium-review.googlesource.com/1157543
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581260}
Former-commit-id: 8ea21472646cc55f31cca9b37c92db6686a25058